Multiple minor documentation edits
The usage documentation now contains a copy of the status message
description from the README.  The description of the button schemes
are better described in config.h.  Several files contain minor edits.

--- a/README
+++ b/README
@@ -35,8 +35,7 @@ Below is a selection of comments posted on the Adafruit Clocks
 forum.  They are listed in reverse chronological order.  And to
 everyone quoted below:  Thank you all for the kind words!
 
-  "[The xmas firmware] just worked from the beginning. ...
-   The clock really [feels like it's completely] renovated! ...
+  "[The xmas firmware] just worked from the beginning...
    Great documentation!"
      --MikeHg
        http://forums.adafruit.com/viewtopic.php?p=324261#p324261
