--- a/hardware/README
+++ b/hardware/README
@@ -115,6 +115,11 @@ I ordered the acrylic parts from Ponoko and have also shared that design:
 
     http://www.ponoko.com/showroom/jarchie
 
+For those in Europe, Formulor (http://www.formulor.de/) is an alternative
+source for the acrylic parts.  Formulor is a Ponoko partner and accepts
+the same SVG design format.  Many thanks to Tobias Scharmann for
+suggesting this service.
+
 See the enclosed bill of materials (BOM.csv) for a complete parts list,
 including manufacturers, suppliers, and part numbers.
 
