--- a/hardware/README
+++ b/hardware/README
@@ -111,7 +111,8 @@ in case others would like to do the same:
     http://www.oshpark.com/shared_projects/6xAVpeHb
     http://www.oshpark.com/shared_projects/PiRXWH3F
 
-I ordered the acrylic parts from Ponoko and have also shared that design:
+I ordered the 3mm clear acrylic parts from Ponoko and have also shared
+that design:
 
     http://www.ponoko.com/showroom/jarchie
 
